# device-simple-PTP

./: CMakeLists.txt  Makefile  cmake_install.cmake  device-simple-PTP
inc/devsdk/: devsdk-base.h  devsdk-cpp.h  devsdk.h
inc/iot/: defs.h
res/: configuration.toml
res/devices/: randomedevice1.json
res/profiles/: RandomExampleProfile.json
src/: main.cpp
